javascript/js_transpiler/peggy_parsers/typescript_to_glsl.js
// Generated by Peggy 1.1.0.
//
// https://peggyjs.org/

"use strict";

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message = message;
  this.expected = expected;
  this.found = found;
  this.location = location;
  this.name = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};

  var peg$startRuleFunctions = { expressions: peg$parseexpressions };
  var peg$startRuleFunction = peg$parseexpressions;

  var peg$c0 = function(a) {return a;};
  var peg$c1 = function(head, tail) {
        return tail.reduce(function(result, element) {
          return result + element[1];
        }, head);
      };
  var peg$c2 = ";";
  var peg$c3 = peg$literalExpectation(";", false);
  var peg$c4 = function(head, tail) {
        return tail.reduce(function(result, element) {
          return result + element[1] + ";";
        }, head);
      };
  var peg$c5 = "public";
  var peg$c6 = peg$literalExpectation("public", false);
  var peg$c7 = "private";
  var peg$c8 = peg$literalExpectation("private", false);
  var peg$c9 = "type";
  var peg$c10 = peg$literalExpectation("type", false);
  var peg$c11 = "=";
  var peg$c12 = peg$literalExpectation("=", false);
  var peg$c13 = function(a, b) {return "#define "+a+" "+b+"\n";};
  var peg$c14 = "interface";
  var peg$c15 = peg$literalExpectation("interface", false);
  var peg$c16 = "class";
  var peg$c17 = peg$literalExpectation("class", false);
  var peg$c18 = "{";
  var peg$c19 = peg$literalExpectation("{", false);
  var peg$c20 = "}";
  var peg$c21 = peg$literalExpectation("}", false);
  var peg$c22 = function(a2, a4) {return ["struct ",a2,"{",a4,"};"].join("");};
  var peg$c23 = function(a1) {return a1;};
  var peg$c24 = function(a1) {const to_be_appended = to_append.map(function(x){
  		let function_name = x.substr(0, x.indexOf('('));
  		let var_name = "temp_" + (to_append.indexOf(x)+var_number)
  		let subs = x.substring(0,x.length-1)
  		alert(function_name+":"+return_types[function_name]);
  		return return_types[function_name] +" "+ var_name + ";" + subs+(subs.endsWith("(")?"":",")+var_name+");"
  	}).join(""); var_number += to_append.length; to_append = []; return to_be_appended + a1+";";};
  var peg$c25 = "const";
  var peg$c26 = peg$literalExpectation("const", false);
  var peg$c27 = "let";
  var peg$c28 = peg$literalExpectation("let", false);
  var peg$c29 = "var";
  var peg$c30 = peg$literalExpectation("var", false);
  var peg$c31 = function(name, val) {return "#define "+name+" ("+val+")\n";};
  var peg$c32 = "while";
  var peg$c33 = peg$literalExpectation("while", false);
  var peg$c34 = "(";
  var peg$c35 = peg$literalExpectation("(", false);
  var peg$c36 = ")";
  var peg$c37 = peg$literalExpectation(")", false);
  var peg$c38 = function(a3, a5) {return ["while(",a3,"){",a5,"}"].join("");};
  var peg$c39 = "do";
  var peg$c40 = peg$literalExpectation("do", false);
  var peg$c41 = function(a2, a5) {return ["do ",a2," while(",a5,");"].join("");};
  var peg$c42 = "switch";
  var peg$c43 = peg$literalExpectation("switch", false);
  var peg$c44 = function(a3, a6) {return ["switch(",a3,"){",a6,"}"].join("");};
  var peg$c45 = "for";
  var peg$c46 = peg$literalExpectation("for", false);
  var peg$c47 = function(a3, a5, a7, a9) {return ["for(",a3,";",a5,";",a7,"){",a9,"}"].join("");};
  var peg$c48 = "foreach";
  var peg$c49 = peg$literalExpectation("foreach", false);
  var peg$c50 = "as";
  var peg$c51 = peg$literalExpectation("as", false);
  var peg$c52 = "=>";
  var peg$c53 = peg$literalExpectation("=>", false);
  var peg$c54 = function(a3, a5, a7, a9) {return ["foreach_with_index","Object",a5,a7,a3,a9];};
  var peg$c55 = function(a3, a5, a7) {return ["for(",a3," in ",a5,"){",a7,"}"].join("");};
  var peg$c56 = "if";
  var peg$c57 = peg$literalExpectation("if", false);
  var peg$c58 = function(a3, a5, a6) {return ["if(",a3,"){",a5,"}",a6].join("");};
  var peg$c59 = function(a3, a5) {return ["if(",a3,"){",a5,"}"].join("");};
  var peg$c60 = "function";
  var peg$c61 = peg$literalExpectation("function", false);
  var peg$c62 = "return";
  var peg$c63 = peg$literalExpectation("return", false);
  var peg$c64 = function(a, b, c) {return "#define "+a+"("+b+") ("+c+")\n"};
  var peg$c65 = ":";
  var peg$c66 = peg$literalExpectation(":", false);
  var peg$c67 = function(name, params, type1, body) {return_types[name] = type1; return "#define "+name+"("+(params===""?"":(params[0]+","))+"returned) {"+params[1]+body+"}\n";};
  var peg$c68 = "<";
  var peg$c69 = peg$literalExpectation("<", false);
  var peg$c70 = ">";
  var peg$c71 = peg$literalExpectation(">", false);
  var peg$c72 = function(name, type_params, params, type1, body) {type_parameters[name+"<"+type_params+">"] = type1; return "#define "+name+"("+type_params+","+(params===""?"":(params[0]+","))+"returned) {"+params[1]+body+"}\n";};
  var peg$c73 = ",";
  var peg$c74 = peg$literalExpectation(",", false);
  var peg$c75 = function(head, tail) {
        return tail.reduce(function(result, element) {
          return result + element[1] + element[3];
        }, head);
      };
  var peg$c76 = "case";
  var peg$c77 = peg$literalExpectation("case", false);
  var peg$c78 = "break";
  var peg$c79 = peg$literalExpectation("break", false);
  var peg$c80 = function(a2, a4) {return ["case ",a2,":",a4].join("")};
  var peg$c81 = "";
  var peg$c82 = function(a1, a2) {return a1+a2};
  var peg$c83 = "default";
  var peg$c84 = peg$literalExpectation("default", false);
  var peg$c85 = function(a4) {return ["default:",a4].join("")};
  var peg$c86 = function(a2) {return ["returned = ",a2].join("");};
  var peg$c87 = function() {return "return";};
  var peg$c88 = function(name, type1, val) {return type1+" "+name+"="+val;};
  var peg$c89 = function(name, type1, val) {return "const "+type1+" "+name+"="+val;};
  var peg$c90 = "[";
  var peg$c91 = peg$literalExpectation("[", false);
  var peg$c92 = "]";
  var peg$c93 = peg$literalExpectation("]", false);
  var peg$c94 = function(name, type1, val) {return type1+"[] "+name+"="+type1+"[]("+val+")";};
  var peg$c95 = function(name, type1, val) {return "const "+type1+"[] "+name+"="+type1+"[]("+val+")";};
  var peg$c96 = function(a1, a2, a3) {return [a1,a2,a3].join("");};
  var peg$c97 = "++";
  var peg$c98 = peg$literalExpectation("++", false);
  var peg$c99 = "--";
  var peg$c100 = peg$literalExpectation("--", false);
  var peg$c101 = function(a1, a2) {return [a1,a2].join("");};
  var peg$c102 = "+=";
  var peg$c103 = peg$literalExpectation("+=", false);
  var peg$c104 = "%=";
  var peg$c105 = peg$literalExpectation("%=", false);
  var peg$c106 = "-=";
  var peg$c107 = peg$literalExpectation("-=", false);
  var peg$c108 = "*=";
  var peg$c109 = peg$literalExpectation("*=", false);
  var peg$c110 = "/=";
  var peg$c111 = peg$literalExpectation("/=", false);
  var peg$c112 = function(t1) {return t1+"[]";};
  var peg$c113 = "Array";
  var peg$c114 = peg$literalExpectation("Array", false);
  var peg$c115 = function(t1) {return type+"[]";};
  var peg$c116 = function(name) {return (name === "number"?"float":name==="boolean"?"bool":name==="void"?"void":name)};
  var peg$c117 = function() {return "";};
  var peg$c118 = "?";
  var peg$c119 = peg$literalExpectation("?", false);
  var peg$c120 = function(a1, a3, a5) {return a1+"?"+a3+":"+a5;};
  var peg$c121 = "||";
  var peg$c122 = peg$literalExpectation("||", false);
  var peg$c123 = "&&";
  var peg$c124 = peg$literalExpectation("&&", false);
  var peg$c125 = "!==";
  var peg$c126 = peg$literalExpectation("!==", false);
  var peg$c127 = function() {return "!=";};
  var peg$c128 = "===";
  var peg$c129 = peg$literalExpectation("===", false);
  var peg$c130 = function() {return "==";};
  var peg$c131 = "<=";
  var peg$c132 = peg$literalExpectation("<=", false);
  var peg$c133 = ">=";
  var peg$c134 = peg$literalExpectation(">=", false);
  var peg$c135 = ">>";
  var peg$c136 = peg$literalExpectation(">>", false);
  var peg$c137 = "<<";
  var peg$c138 = peg$literalExpectation("<<", false);
  var peg$c139 = "+";
  var peg$c140 = peg$literalExpectation("+", false);
  var peg$c141 = "-";
  var peg$c142 = peg$literalExpectation("-", false);
  var peg$c143 = "*";
  var peg$c144 = peg$literalExpectation("*", false);
  var peg$c145 = "/";
  var peg$c146 = peg$literalExpectation("/", false);
  var peg$c147 = "%";
  var peg$c148 = peg$literalExpectation("%", false);
  var peg$c149 = function(a2) {return ["-",a2].join("");};
  var peg$c150 = function(head, type_params, tail) {
  	  var split_head = head.split(".");
        if(split_head.length === 2 && split_head[0] === "Math" && (["sin","cos","tan","sinh","cosh","tanh","abs","floor","ceil","exp","pow","log","log2","sqrt","trunc","sign"].indexOf(split_head[1]) !== -1)){
  	      return split_head[1] + tail[1];
        }
        else{
        let to_return = head+(type_params === ""?"":"<"+type_params[1]+">");
        if(type_params !== ""){
  		//get return type
  		alert(JSON.stringify(type_parameters));
  		for(let key of Object.keys(type_parameters)){
  		
  			if(key.startsWith(head+"<")){
  				//alert(key);
  				//alert(key.substring(head.length+1,key.length-1));
  				//alert(return_types[key]);
  				//alert(type_params[1]);
  				//alert(replaceAll(return_types[key],type_params[1],key.substring(head.length+1,key.length-1)));
  				//alert(replaceAll(key,return_types[key],toString(type_params[1])));
  				return_types[to_return+tail[1]] = replaceAll(key,type_parameters[key],type_params[1]);
  				alert(to_return+tail[1]);
  				//alert(replaceAll("fun<dog,doggy>","doggy[],dog[]","a,b"))
  			}
  		}
        }
        
        if(tail !== ""){
        to_return += tail[1];
        if(to_append.indexOf(to_return) === -1){
  		//to_append.push(var_number);
  		to_append.push(to_return);
  		//var_number += 1.;
  		
        }
        return "temp_"+(to_append.indexOf(to_return)+var_number);
        }
  	  return to_return;
  	  }
      };
  var peg$c151 = function(a2) {return "("+a2+")";};
  var peg$c152 = "!";
  var peg$c153 = peg$literalExpectation("!", false);
  var peg$c154 = function(a1, a2) {return "!"+a2;};
  var peg$c155 = "new";
  var peg$c156 = peg$literalExpectation("new", false);
  var peg$c157 = function(a, b) {return a+"("+b+")"};
  var peg$c158 = function(a2) {return "["+a2+"]";};
  var peg$c159 = ".";
  var peg$c160 = peg$literalExpectation(".", false);
  var peg$c161 = function(head, tail) {
        let to_return = tail.reduce(function(result, element) {
          return result + element[1] + element[3];
        }, head);
        if(to_return === "Math.PI")
  		return "radians(180)";
  	  else if(to_return === "Math.SQRT2")
  		return "sqrt(2.)";
  	  else return to_return;
      };
  var peg$c162 = function(a1, t1) {return t1 + " " + a1;};
  var peg$c163 = function(a1, t1) {return ["param_"+a1,t1 + " " + a1+"=param_"+a1+";"];};
  var peg$c164 = function(head, tail) {
        return tail.reduce(function(result, element) {
          return [result[0]+","+element[3][0], result[1]+element[3][1]];
        }, head);
      };
  var peg$c165 = "else";
  var peg$c166 = peg$literalExpectation("else", false);
  var peg$c167 = "elseif";
  var peg$c168 = peg$literalExpectation("elseif", false);
  var peg$c169 = function(a2) {return ["else {",a2,"}"].join("");};
  var peg$c170 = function(a1, a3, a5) {return ["else if(",a3,"){",a5,"}"].join("")};
  var peg$c171 = function(a2) {return a2;};
  var peg$c172 = function(a1) {return a1+";";};
  var peg$c173 = /^[a-zA-Z_]/;
  var peg$c174 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false);
  var peg$c175 = /^[a-zA-Z0-9_]/;
  var peg$c176 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false);
  var peg$c177 = function() {return text();};
  var peg$c178 = "\"";
  var peg$c179 = peg$literalExpectation("\"", false);
  var peg$c180 = /^[^"\\]/;
  var peg$c181 = peg$classExpectation(["\"", "\\"], true, false);
  var peg$c182 = "\\";
  var peg$c183 = peg$literalExpectation("\\", false);
  var peg$c184 = peg$anyExpectation();
  var peg$c185 = function(a, b) {return a+"."+b;};
  var peg$c186 = peg$otherExpectation("integer");
  var peg$c187 = /^[0-9]/;
  var peg$c188 = peg$classExpectation([["0", "9"]], false, false);
  var peg$c189 = function() { return text(); };
  var peg$c190 = /^[ \t\n\r]/;
  var peg$c191 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);

  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = 0;
  var peg$maxFailExpected = [];
  var peg$silentFails = 0;

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseexpressions() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsestatements();
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsestatements() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parsestatement();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse_();
      if (s4 !== peg$FAILED) {
        s5 = peg$parsestatement();
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parse_();
        if (s4 !== peg$FAILED) {
          s5 = peg$parsestatement();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c1(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseinterface_statements() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    s1 = peg$parseparameter();
    if (s1 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 59) {
        s2 = peg$c2;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c3); }
      }
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$currPos;
        s5 = peg$parse_();
        if (s5 !== peg$FAILED) {
          s6 = peg$parseparameter();
          if (s6 !== peg$FAILED) {
            s7 = peg$parse_();
            if (s7 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 59) {
                s8 = peg$c2;
                peg$currPos++;
              } else {
                s8 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c3); }
              }
              if (s8 !== peg$FAILED) {
                s5 = [s5, s6, s7, s8];
                s4 = s5;
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$currPos;
          s5 = peg$parse_();
          if (s5 !== peg$FAILED) {
            s6 = peg$parseparameter();
            if (s6 !== peg$FAILED) {
              s7 = peg$parse_();
              if (s7 !== peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 59) {
                  s8 = peg$c2;
                  peg$currPos++;
                } else {
                  s8 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c3); }
                }
                if (s8 !== peg$FAILED) {
                  s5 = [s5, s6, s7, s8];
                  s4 = s5;
                } else {
                  peg$currPos = s4;
                  s4 = peg$FAILED;
                }
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c4(s1, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
